✅ Add test for getGetRequests() and refactor method